# Twitter-like-API

./: .gitignore  Dockerfile  README.md  celery-entrypoint.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
api/v1/: urls.py
core/: asgi.py  middleware.py  producer.py  settings.py  urls.py  wsgi.py
innotter/: settings.py
page/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  views.py
page/migrations/: 0001_initial.py  0002_post_likes.py  0003_rename_likes_post_liked_by_alter_page_followers.py  0004_alter_page_followers_alter_post_liked_by.py  0005_post_created_by.py  0006_alter_page_image_alter_post_reply_to.py  0007_alter_post_reply_to.py  0008_alter_page_follow_requests_alter_page_followers.py  0009_alter_post_liked_by.py
tests/: conftest.py
tests/api/: test_page.py  test_post.py  test_user.py
user/: admin.py  managers.py  models.py  permissions.py  serializers.py  services.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_blocked_to.py  0003_alter_user_is_blocked.py  0004_alter_user_role.py
